# CLI_interpreter

./: AddCalc.cpp  AddCalc.h  CMakeLists.txt  ConcatCalc.cpp  ConcatCalc.h  FunctionCalc.h  FunctionCalculator.cpp  FunctionCalculator.h  MultiCalc.cpp  MultiCalc.h  SignValue.cpp  SignValue.h  StringValue.cpp  StringValue.h  SubCalc.cpp  SubCalc.h  ValueCalc.h  cast_helpers.cpp  cast_helpers.h  main.cpp  parser_exception.h
